# gulinalg

./: .gitignore  README.md  environment.yml  meson.build  meson.options  pyproject.toml
.github/workflows/: linux.meson.pypi.yml  linux.meson.yml  linux.setup.py.yml  linux.yml
buildscripts/: process_src_template.py
distutils/: conv_template.py
gulinalg/: __init__.py  gufunc_general.py  gufunc_linalg.py  meson.build
gulinalg/src/: gulinalg.c.src
gulinalg/tests/: meson.build  test_bugs.py  test_decomposition.py  test_determinant.py  test_gufunc_general.py  test_inverse.py  test_matrix_multiply.py  test_solve.py  test_ufunc_extras.py
