[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.16.0",
    "numpy",
    "scipy_openblas32"
]


[project]
name = "gulinalg"
version = "0.2"
maintainers = [
    {name = "Quansight", email = ".@gmail.com"}
]
description = "Linear algebra gufuncs"
requires-python = ">=3.10"
dependencies = ["numpy>=2,<3",
                "scipy_openblas32"
]
